<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/cost_of_service_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cost_of_service_edit_text"
        app:srcCompat="@drawable/ic_store" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cost_of_service_edit_text"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/cost_of_service"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cost_of_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textColorHint="#546E7A" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/icon_service_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/service_question"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/service_question"
        app:srcCompat="@drawable/ic_service" />

    <TextView
        android:id="@+id/service_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/how_was_the_service"
        app:layout_constraintStart_toStartOf="@+id/cost_of_service_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/cost_of_service_edit_text" />

    <RadioGroup
        android:id="@+id/tip_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checkedButton="@id/option_twendy_percent"
        app:layout_constraintStart_toStartOf="@+id/service_question"
        app:layout_constraintTop_toBottomOf="@+id/service_question">

        <RadioButton
            android:id="@+id/option_twendy_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amazing_20" />

        <RadioButton
            android:id="@+id/option_eighteen_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/good_18" />

        <RadioButton
            android:id="@+id/option_fifteen_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/okay_15" />
    </RadioGroup>

    <ImageView
        android:id="@+id/icon_round_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/round_up_switch"
        app:layout_constraintStart_toStartOf="@+id/icon_service_question"
        app:layout_constraintTop_toTopOf="@+id/round_up_switch"
        app:srcCompat="@drawable/ic_round_up" />

    <Switch
        android:id="@+id/round_up_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:minHeight="48dp"
        android:text="@string/round_up_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tip_option"
        app:layout_constraintTop_toBottomOf="@+id/tip_option"
        tools:checked="true" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="@+id/round_up_switch"
        app:layout_constraintStart_toStartOf="@+id/round_up_switch"
        app:layout_constraintTop_toBottomOf="@+id/round_up_switch" />

    <TextView
        android:id="@+id/tip_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tip_amount"
        app:layout_constraintEnd_toEndOf="@+id/calculate_button"
        app:layout_constraintTop_toBottomOf="@+id/calculate_button" />
</androidx.constraintlayout.widget.ConstraintLayout>